@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2020 the original author or authors.
+ * Copyright 2014-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,6 +43,7 @@ import org.springframework.util.Assert;
  * {@code priorityEnabled = true} option.
  *
  * @author Artem Bilan
+ * @author Adama Sorho
  *
  * @since 4.0
  */
@@ -94,8 +95,8 @@ public class MongoDbChannelMessageStore extends AbstractConfigurableMongoDbMessa
 	}
 
 	@Override
-	public void afterPropertiesSet() {
-		super.afterPropertiesSet();
+	protected void createIndexes() {
+		super.createIndexes();
 		getMongoTemplate()
 				.indexOps(this.collectionName)
 				.ensureIndex(new Index(MessageDocumentFields.GROUP_ID, Sort.Direction.ASC)
