@@ -37,7 +37,7 @@ See, for example, `transformWith()`, `splitWith()` in xref:dsl.adoc#java-dsl[ Ja
 See xref:configuration/global-properties.adoc[Global Properties] for more information.
 
 - The `@MessagingGateway` and `GatewayEndpointSpec` provided by the Java DSL now expose the `errorOnTimeout` property of the internal `MethodInvocationGateway` extension of the `MessagingGatewaySupport`.
-See xref:gateway.adoc#gateway-no-response[Gateway Behavior When No response Arrives] for more information.
+See xref:gateway.adoc#gateway-no-response[ Gateway Behavior When No response Arrives] for more information.
 
 [[x6.2-websockets]]
 === WebSockets Changes
@@ -57,3 +57,9 @@ See xref:kafka.adoc#kafka-inbound-pollable[Kafka Inbound Channel Adapter] for mo
 
 The `JdbcMessageStore`, `JdbcChannelMessageStore`, `JdbcMetadataStore`, and `DefaultLockRepository` implement `SmartLifecycle` and perform a`SELECT COUNT` query, on their respective tables, in the `start()` method to ensure that the required table (according to the provided prefix) is present in the target database.
 See xref:jdbc/message-store.adoc#jdbc-db-init[Initializing the Database] for more information.
+
+[[x6.2-mongodb]]
+=== MongoDB support change
+
+A new option `setCreateIndexes(boolean)` has been introduced in `AbstractConfigurableMongoDbMessageStore` to disable the auto indexes creation.
+See xref:mongodb.adoc#mongodb-message-store[MongoDB Message Store] for an example.
